@@ -1,3 +1,7 @@
+2019-10-30  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/plotseries.R (plotseries): add fan plot code
+
 2019-10-14  Enrico Schumann  <es@enricoschumann.net>
 
 	* R/plotseries.R (plotseries): add argument
